--- a/src/assets/scss/lbd/_variables.scss
+++ b/src/assets/scss/lbd/_variables.scss
@@ -2,6 +2,8 @@
 //
 //## For each of Bootstrap's buttons, define text, background and border color.
 
+@use "sass:color";
+
 $none:                       0   !default;
 $border-thin:                1px !default;
 $border-thick:               2px !default;
@@ -37,7 +39,7 @@ $success-states-color:       #049F0C !default;
 
 $info-color:                 #1DC7EA !default;
 $info-bg:                    #1DC7EA !default;
-$info-states-color:          lighten($info-color, 8%) !default;
+$info-states-color:          color.adjust($info-color, $lightness: 8%) !default;
 
 $warning-color:              #FF9500 !default;
 $warning-bg:                 #FF9500 !default;
@@ -233,11 +235,11 @@ $social-tumblr: 			#35465c;
 $social-behance: 			#1769ff;
 
 
-$filter-blue:         darken($primary-color, 10%);
-$filter-azure:        darken($info-color, 10%);
-$filter-green:        darken($success-color, 10%);
-$filter-orange:       darken($warning-color, 10%);
-$filter-red:          darken($danger-color, 10%);
+$filter-blue:         color.adjust($primary-color, $lightness: -10%);
+$filter-azure:        color.adjust($info-color, $lightness: -10%);
+$filter-green:        color.adjust($success-color, $lightness: -10%);
+$filter-orange:       color.adjust($warning-color, $lightness: -10%);
+$filter-red:          color.adjust($danger-color, $lightness: -10%);
 
 
 $new-blue:            #1DC7EA;
@@ -256,8 +258,8 @@ $bottombar-back:       bottombar-back !default;
 
 
 $white-navbar:              rgba(#FFFFFF, .96);
-$blue-navbar:               lighten($new-dark-blue, 10%);
-$azure-navbar:              lighten($new-blue, 15%);
-$green-navbar:              lighten($new-green, 10%);
-$orange-navbar:             lighten($new-orange, 10%);
-$red-navbar:                lighten($new-red, 10%);
+$blue-navbar:               color.adjust($new-dark-blue, $lightness: 10%);
+$azure-navbar:              color.adjust($new-blue, $lightness: 15%);
+$green-navbar:              color.adjust($new-green, $lightness: 10%);
+$orange-navbar:             color.adjust($new-orange, $lightness: 10%);
+$red-navbar:                color.adjust($new-red, $lightness: 10%);
